--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StudyTogether - Collaborative Learning Platform</title>
-    <meta name="description" content="Connect with fellow students, form study groups, track progress, and unlock your full learning potential through collaborative education." />
-    <meta name="author" content="StudyTogether" />
+    <title>GrowTogether - Collaborative Learning Platform</title>
+    <meta name="description" content="Connect with fellow students, form grow groups, track progress, and unlock your full learning potential through collaborative education." />
+    <meta name="author" content="GrowTogether" />
 
-    <meta property="og:title" content="StudyTogether - Collaborative Learning Platform" />
-    <meta property="og:description" content="Connect with fellow students, form study groups, track progress, and unlock your full learning potential through collaborative education." />
+    <meta property="og:title" content="GrowTogether - Collaborative Learning Platform" />
+    <meta property="og:description" content="Connect with fellow students, form grow groups, track progress, and unlock your full learning potential through collaborative education." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
